<resources>
    <string name="app_name">Image Featuring (FeatureApp)</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listProcess">Liste des classes de filtres compléter dans le champ en-dessous pour ajouter</string>
    <string name="completeBox">Tapez les premières lettres dans le champ texte puis sélectionner l\'effet</string>
    <string name="photo">main.imageViewDefaultIcon</string>
    <string name="effect">Effect</string>
    <string name="filePath">one.empty3.feature.app</string>
    <string name="capturePhoto">Camera</string>
    <string name="choosePhoto">Gallery</string>
    <string name="andex_file_selection_title">Movie</string>
    <string name="browser_title_background_color">#000000</string>
    <string name="browser_title_foreground_color">#FFFFFF</string>
    <string name="browser_list_background_color">#AAAAAA</string>
    <string name="title_activity_camera_preview">CameraPreview</string>
    <string name="title_activity_fullscreen_camera_live_effect">FullscreenActivityCameraLiveEffect
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_choose_effect_list">ChooseEffectList</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="camera_video_effect">Caméra</string>
    <string name="file_view_effect">Fichier ouvert</string>
    <string name="choose_effects">Effects</string>
    <string name="choose_movie">Choose movie</string>
    <string name="image_preview_before_and_after_rendering_effects">Image preview, before and after rendering effects
    </string>
    <string name="about">About</string>
    <string name="maxRes_1200">1200.0</string>
    <string name="maximum_resolution">Maximum resolution</string>
    <string name="share">Share</string>
    <string name="beta">Beta?</string>
    <string name="donn_es_utilisateur_personnelles_et_sensibles">Données utilisateur personnelles et sensibles Dans
        l\'application image featuring, les seules données auxquelles l\'application accède sont les fichiers multimédia
        ouvert par le bouton prise de vue ou choisir un fichier. Ceux-ci sont traités par l\'application et
        éventuellement des copies de travail sont stockées dans le répertoire data de l\'application et figure donc sur
        le système dans un format ou l\'autre. Dans une future version il sera possible de partager vos résultats avec
        d\'autres utilisateurs, internautes. Ces données sont considérées par nous, DAHMEN Manuel at empty3.one comme
        privées et ne sont pas collectées, ni traitées par nos services.
    </string>
    <string name="privacy_policy_and_families_policy">
        <![CDATA[Privacy policy and Families policy for Apps by DaTheWolf — one.empty3 Calculator (calculette simple) [Application] Image Featuring [Application] Privacy policy Calculator (calculette simple) [Application] is a calculus application designed for adults, children and all family. Application is not designed especially to children. Families Policy Application doesn’t share user-provided information with third parties; and Application doesn’t share the user’s physical location with other users. Application doesn’t display Ads Application doesn’t disclose the collection of any personal and sensitive information from children. User Data is collected as anonymous data on Google Store. Application is not collecting supplementary data. App name: Calculator (calculette simple) Contact: DAHMEN Manuel (dathewolf@gmail.com>) [Street Address]]]></string>
    <string name="save">Save</string>
    <string name="title_activity_choose_effects_compose">ChooseEffectsCompose</string>
    <string name="edit_text_to_put_on_the_image">Edit text to put on the image</string>
    <string name="todo">TODO</string>
    <string name="ok">OK</string>
    <string name="back_without_saving">Back without saving</string>
    <string name="tools">Tools</string>
    <string name="draw">Draw</string>
    <string name="draw_color">Draw color</string>
    <string name="select_rectangle">Select</string>
    <string name="draw_activity">Draw</string>
    <string name="unselect">Zoom -</string>
    <string name="effect_name">Effect name</string>
    <string name="remove">Remove</string>
    <string name="apply_effects">Apply effects</string>
    <string name="effect_image_to_image">Effect image to image</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="image_pour_l_ecriture_du_texte">Image pour l\'écriture du texte</string>
    <string name="ecrire_du_texte_ici">Ecrire du texte ici</string>
    <string name="apply">Apply</string>
    <string name="add_text">Text</string>
    <string name="draw_button_text">Face</string>
    <string name="back_button_text_activity">Back</string>
    <string name="grid_text_00">00</string>
    <string name="grid_text_01">01</string>
    <string name="grid_text_02">02</string>
    <string name="grid_text_10">10</string>
    <string name="grid_text_11">11</string>
    <string name="grid_text_12">12</string>
    <string name="preview_of_shapes">Preview of shapes</string>
    <string name="textDp">48</string>
    <string name="title_activity_image_files">ImageFiles</string>
    <string name="title_activity_color_chooser">ColorChooser</string>
    <string name="last_saved">Load Saved</string>
    <string name="commentEffect" translatable="false">!!</string>
    <string name="primary_pencil_color">Primary pencil color</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="DOT">.</string>
    <string name="_0">0</string>
    <string name="EQUALS">=</string>
    <string name="ADD">+</string>
    <string name="MUL">*</string>
    <string name="sqrt">sqrt</string>
    <string name="SUB">-</string>
    <string name="DIV">/</string>
    <string name="EXP">^</string>
    <string name="edit_text_here_or_by_push_numbers">Edit text here or by push numbers</string>
    <string name="result">Result</string>
    <string name="about_and_policies">About and privacy policy</string>
    <string name="POLICY_URI">https://empty3.one/android/UserPolicyandFamilyPolicyforCalculetteSimplebyEmpty3.html</string>
    <string name="donn_es_utilisateur_personnelles_et_sensibles_dans_l_application_image_featuring_les_seules_donn_es_auxquelles_l_application_acc_de_sont_les_fichiers_multim_dia_ouvert_par_le_bouton_prise_de_vue_ou_choisir_un_fichier_ceux_ci_sont_trait_s_par_l_application_et_ventuellement_des_copies_de_travail_sont_stock_es_dans_le_r_pertoire_data_de_l_application_et_figure_donc_sur_le_syst_me_dans_un_format_ou_l_autre_dans_une_future_version_il_sera_possible_de_partager_vos_r_sultats_avec_d_autres_utilisateurs_internautes_ces_donn_es_sont_consid_r_es_par_nous_dahmen_manuel_at_empty3_one_comme_priv_es_et_ne_sont_pas_collect_es_ni_trait_es_par_nos_services">Données utilisateur personnelles et sensibles Dans l\'application image featuring, les seules données auxquelles l\'application accède sont les fichiers multimédia ouvert par le bouton prise de vue ou choisir un fichier. Ceux-ci sont traités par l\'application et éventuellement des copies de travail sont stockées dans le répertoire data de l\'application et figure donc sur le système dans un format ou l\'autre. Dans une future version il sera possible de partager vos résultats avec d\'autres utilisateurs, internautes. Ces données sont considérées par nous, DAHMEN Manuel at empty3.one comme privées et ne sont pas collectées, ni traitées par nos services.</string>
    <string name="title_activity_formula_store">FormulaStore</string>
    <string name="store_formula">Store Formula</string>
    <string name="add">Add</string>
    <string name="DEL"><![CDATA[<<<]]></string>
    <string name="back">Back</string>
    <string name="accept_user_data_management_policy_and_privacy">Accept User Data Management Policy and Privacy</string>
    <string name="about_privacy">About privacy</string>
    <string name="dialog_message">Choisir une fonction</string>
    <string name="dialog_title">Fonctions prédéfinies</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="open_brace">(</string>
    <string name="close_brace">)</string>
    <string name="coma">,</string>
    <string name="fragment_function_ok">OK</string>
    <string name="fragment_function_cancel">Cancel</string>
    <string name="function_string">Function String</string>
    <string name="back2">Back</string>
    <string name="name">name</string>
    <string name="expression">expression</string>
    <string name="write_formula">Write formula</string>
    <string name="buttonCodeBefore">Add code before</string>
    <string name="buttonCodeAfter">Add code after</string>
    <string name="backToGraphics">Back to Graphics view</string>
    <string name="choose_shader_like">MathForm</string>
    <string name="p_x_y_color">Type for points p(x,y) = Color(r, g, b)</string>
    <string name="go_to_previous_activity">Go to previous activity</string>
    <string name="title_activity_toolbar">toolbar</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="preview_of_image">Preview of image</string>
    <string name="application_of_formulas">Application of formulas</string>
    <string name="view">View</string>
    <string name="draw2">Draw</string>
    <string name="hello_world">Hello Round World!</string>
    <string name="title_activity_main_compose_v2" translatable="false">MainActivityComposeV2</string>
    <string name="button_current_file_is_null"><![CDATA["Pas de fichier image choisis.<br/>" +
                    "Choisisssez une image dans les fichiers de<br/>" +
                    "le copier/coller. La fonction draw ne fonctionne pas<br/>" +
                    "actuellement.<br/>"]]></string>
    <string name="title_activity_main">MyCameraActivity</string>
    <string name="new_layout_app">New App Layout</string>
    <string name="floating_action_button_to">Floating Action Button to</string>
    <string name="add_picture_file_from_directory">Add from directory</string>
    <string name="add_picture_from_camera">Add from camera</string>
    <string name="main">Main</string>
    <string name="capture">Capture</string>
    <string name="subimage_pasted">Subimage pasted</string>
    <string name="editProperties">Props</string>
    <string name="ok_calc">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="signature_title">Your signature</string>
    <string name="display_place" />
</resources>