<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023.
  ~
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@android:drawable/ic_media_ff"
        android:contentDescription="@string/effect_image_to_image" />


    <TextView
        android:id="@+id/textEffectName"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:height="48dp"
        android:text="@string/effect_name" />

    <Button
        android:id="@+id/buttonAddTOEffect"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:height="48dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/buttonRemoveFromList"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:height="48dp"
        android:text="@string/remove" />

    <Button
        android:id="@+id/commentEffect"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:height="48dp"
        android:text="@string/commentEffect" />

</LinearLayout>