<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023.
  ~
  ~
  ~  Copyright 2012-2023 Manuel Daniel Dahmen
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E6E6"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    android:theme="@style/Theme.FeatureAppmain"

    >

    <!-- <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph" />
 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextCalculus"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:autofillHints="@string/edit_text_here_or_by_push_numbers"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/edit_text_here_or_by_push_numbers"
            android:inputType="textPersonName"
            android:labelFor="@id/answerText"
            android:textAlignment="center"
            android:textSize="28dp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:theme="@style/Theme.FeatureAppmain"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:theme="@style/Theme.FeatureAppmain"

        >

        <Button
            android:id="@+id/button1"

            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="28dp"

            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button2"

            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button3"

            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textAlignment="viewStart"
            android:textColorHint="#FBD3D3" />

        <Button
            android:id="@+id/buttonParenthesisA"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open_brace"
            android:textColorHighlight="#7E66A8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button5"

            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button6"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/_6" />

        <Button
            android:id="@+id/buttonFunction"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="128dp"
            android:text="function(" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:theme="@style/Theme.FeatureAppmain"

        >

        <Button
            android:id="@+id/button7"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button8"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button9"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/_9" />

        <Button
            android:id="@+id/buttonParenthesis"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="30dp"
            android:text="@string/close_brace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dotButton"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/DOT" />

        <Button
            android:id="@+id/button0"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/_0" />

        <Button
            android:id="@+id/equalButton"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/EQUALS" />

        <Button
            android:id="@+id/buttonComa"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/coma" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/ADD" />

        <Button
            android:id="@+id/multButton"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/MUL" />
        <!--
<Button
    android:id="@+id/sqrtButton"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:text="@string/sqrt"
    app:layout_constraintStart_toEndOf="@id/multButton"
    app:layout_constraintTop_toBottomOf="@id/equalButton" />
-->
        <Button
            android:id="@+id/delButton"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/DEL" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/substractButton"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/SUB" />

        <Button
            android:id="@+id/divideButton"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/DIV" />

        <Button
            android:id="@+id/expButton"
            android:theme="@style/Theme.FeatureAppmain"


            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/EXP" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/answerText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/result"
            android:theme="@style/Theme.FeatureAppmain"


            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="vertical">
        <!--
                <Button
                    android:id="@+id/buttonBak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back2"
                    android:theme="@style/Theme.FeatureAppmain"

             />
        -->
        <Button
            android:id="@+id/buttonOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:theme="@style/Theme.FeatureAppmain"

            />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:theme="@style/Theme.FeatureAppmain"

            />
    </LinearLayout>
</LinearLayout>