<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory app:title="@string/maximum_resolution">

        <EditTextPreference app:key="maxRes"
                app:title="Maximum resolution"
                app:defaultValue="@string/maxRes_1200"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/signature_title">
        
        <EditTextPreference
                app:key="signature"
                app:title="@string/signature_title"
                app:useSimpleSummaryProvider="true" />
        
        <ListPreference
                app:key="display"
                app:title="@string/display_place"
                app:entries="@array/display_places"
                app:entryValues="@array/active_display_places"
                app:defaultValue="none"
                app:useSimpleSummaryProvider="true" />
    
    </PreferenceCategory>

    <PreferenceCategory app:title="Image Directories">
        <EditTextPreference app:key="loadImageDirectory"
                app:title="Load Image Directory">
        </EditTextPreference>
        <EditTextPreference app:key="saveImageDirectory"
                
                app:title="Save Image Directory">
        </EditTextPreference>
        <EditTextPreference app:key="textureImageDirectory"
                app:title="Texture Image Directory"
                >
            
        </EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>