<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023.
  ~
  ~
  ~  Copyright 2012-2023 Manuel Daniel Dahmen
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearChooseButtons"
        android:layout_width="match_parent"
        android:theme="@style/Theme.FeatureAppmain"


        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/takePhotoButton"
            android:theme="@style/Base.Widget.AppCompat.Button"


            android:layout_height="48dp"
            android:autofillHints="@string/capturePhoto"
            android:contentDescription="@string/capturePhoto"
            android:drawableStart="@drawable/apn"
            android:text="@string/capturePhoto"
            android:layout_width="wrap_content" />

        <Button
            android:id="@+id/choosePhotoButton"
            android:theme="@style/Base.Widget.AppCompat.Button"


            android:layout_height="48dp"
            android:autofillHints="@string/choosePhoto"
            android:contentDescription="@string/choosePhoto"
            android:drawableStart="@drawable/folder"
            android:text="@string/choosePhoto"
            android:background="@color/light_blue_A200"
            android:layout_width="wrap_content" />

        <Button
            android:id="@+id/save"
            android:theme="@style/Theme.FeatureAppmain"


            android:background="@color/light_blue_A200"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/share"
            android:theme="@style/Theme.FeatureAppmain"


            android:background="@color/light_blue_A200"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/share" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/selectButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/draw_activity"
            android:theme="@style/Theme.FeatureAppmain"


            android:background="@color/light_blue_400"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/draw_activity" />


        <Button
            android:id="@+id/unselect_rect"
            android:theme="@style/Theme.FeatureAppmain"


            android:background="@color/light_blue_400"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/unselect" />


        <Button
            android:id="@+id/copy"
            android:theme="@style/Theme.FeatureAppmain"


            android:background="@color/light_blue_400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:text="@string/copy" />

        <Button
            android:id="@+id/paste"
            android:theme="@style/Theme.FeatureAppmain"


            android:background="@color/light_blue_400"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/paste" />
    </LinearLayout>

    <one.empty3.feature.app.maxSdk29.pro.ImageViewSelection
        android:id="@+id/currentImageView"
        android:theme="@style/Theme.FeatureAppmain"


        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_preview_before_and_after_rendering_effects"
        android:src="@drawable/icon"
        android:background="@color/black" />

</LinearLayout>